# gpu_pandora_GS

./: .appveyor.yml  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  Version.cmake  build_version.txt  cmake_options.cmake
_img/resources/: font_map.csv  font_map.desc  text_font_map.csv  text_font_map.desc  title_font_map.csv  title_font_map.desc
_img/resources_win32/: resources.h  resources.rc
_img/templates/: resources.h  resources.rc.in
_scripts/: _cmake_project_build.bat  _cmake_project_build.sh  cmake_vs2017-win7.bat  cmake_vs2019-T2017-win7.bat  cmake_vs2019-clang-win10.bat  cmake_vs2019-win10-clang.bat  cmake_vs2019-win10.bat
_scripts/ci/: install_dependencies.bat  install_dependencies.sh
config/: CMakeLists.txt
config/include/config/: config.h  emulator_info.h  file_path_utils.h  presets.h  serializer.h  types.h
config/include/config/_private/: _serializer_keys.h
config/src/: config.cpp  emulator_info.cpp  file_path_utils.cpp  presets.hpp  serializer.hpp  types.hpp
config/test/: config_test.cpp  emulator_info_test.cpp  file_path_utils_test.cpp  presets_test.cpp  serializer_test.cpp  types_test.cpp
display/: CMakeLists.txt
display/include/display/: dma_chain_iterator.h  font.h  font_map.h  geometry.h  image_loader.h  primitives.h  renderer.h  status_lock.h  status_register.h  types.h  video_api.h  viewport.h  window_builder.h
display/include/display/controls/: control_mesh.h  icon_mesh.h  text_mesh.h
display/src/: dummy.cpp  font.cpp  font_map.cpp  image_loader.cpp  primitives.cpp  renderer.cpp  status_register.cpp  viewport.cpp  window_builder.cpp
display/src/controls/: control_mesh.cpp  icon_mesh.cpp  text_mesh.cpp
display/test/: dma_chain_iterator_test.cpp  font_map_test.cpp  status_lock_test.cpp  status_register_test.cpp  viewport_test.cpp  window_builder_test.cpp
display/tools/font_descriptor_builder/: CMakeLists.txt
display/tools/font_descriptor_builder/src/: main.cpp
display/tools/primitive_viewer/: CMakeLists.txt
display/tools/primitive_viewer/src/: main.cpp
menu/: CMakeLists.txt
menu/include/menu/: color_theme.h  config_profile.h  general_settings_page.h  hotkey_actions.h  hotkey_bindings_page.h  interpolation_type.h  menu_frame.h  message_resources.h  osd_settings_page.h  page.h  renderer_context.h  renderer_state_buffers.h  tile_colors.h
menu/include/menu/controls/: button.h  check_box.h  combo_box.h  combo_box_option.h  control.h  fieldset.h  geometry_generator.h  key_binding.h  label.h  popup.h  ruler.h  scroll_bar.h  slider.h  tab_control.h  text_box.h  tile.h  tooltip.h  types.h  vertical_tab_control.h  vertical_tab_option.h
menu/include/menu/pages/: advanced_effects.h  compatibility_settings.h  general_settings.h  hotkey_bindings.h  main_menu.h  osd_settings.h  page.h  page_content_builder.h  profile_selector.h  profile_settings.h  screen_stretching.h  smoothing_upscaling.h
menu/shaders/: control.ps.hlsl  control.vs.hlsl  icon.ps.hlsl  icon.vs.hlsl  label.ps.hlsl
menu/src/: color_theme.cpp  general_settings_page.cpp  hotkey_bindings_page.cpp  menu_frame.cpp  message_resources.cpp  osd_settings_page.cpp  page.cpp  renderer_context.cpp  renderer_state_buffers.cpp
menu/src/controls/: button.cpp  check_box.cpp  combo_box.cpp  fieldset.cpp  geometry_generator.cpp  key_binding.cpp  label.cpp  popup.cpp  ruler.cpp  scroll_bar.cpp  slider.cpp  tab_control.cpp  text_box.cpp  tile.cpp  tooltip.cpp  vertical_tab_control.cpp
menu/src/pages/: advanced_effects.cpp  compatibility_settings.cpp  general_settings.cpp  hotkey_bindings.cpp  main_menu.cpp  osd_settings.cpp  page.cpp  page_content_builder.cpp  profile_selector.cpp  profile_settings.cpp  screen_stretching.cpp  smoothing_upscaling.cpp
menu/src/shaders/: control.hlsl.hpp  icon.hlsl.hpp  label.hlsl.hpp
psemu/: CMakeLists.txt
psemu/include/psemu/: config_io.h  psemu_gpu.h  syslog.h  timer.h
psemu/src/: config_io.hpp  psemu_gpu.cpp  psemu_zinc.cpp  psemu_zinc.hpp  syslog.cpp  timer.hpp
psemu/templates/: gpuPandoraGS.def.in  library_info.h.in
utils/: CMakeLists.txt
utils/include/utils/: syslog.h
utils/src/: syslog.cpp
utils/test/: main.cpp  syslog_test.cpp
